--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ button {
 
 <div class="container" id="content">
   <div class="story">After 8+ years, you said</div>
-  <div class="quote">“why should girls have all the fun”</div>
+  <div class="quote">“why should girls have all the fun?”</div>
   <div class="story">Fair enough 😏</div>
   <div class="question">Will you be my Valentine?</div>
   <div class="bubu">🐻‍❄️🐼</div>
@@ -175,8 +175,8 @@ function celebrate() {
     <div class="celebration-card">
         <div class="yes-title">I Knew It! 💖</div>
         <div class="yes-message">
-            “Eight years, thousands of laughs, and a lifetime of memories later... <br>
-            and you're still the only person I want to annoy forever.”
+            “Eight years, thousands of laughs, and a lifetime of memories ... <br>
+            You're still the only person I choose to annoy forever.”
         </div>
         <div class="photo-container">
             <img class="user-photo" src="https://i.postimg.cc/ykMG1BW1/IMG-20200829-213035.jpg" alt="Us 1">
